# civicvault

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  claude.md  compose.yaml  manage.py  project_brief.md  pyproject.toml
.github/workflows/: build-push.yml  ci.yml
catalog/: admin.py
catalog/api/: auth.py  serializers.py  services.py  uploads.py  urls.py  views.py
catalog/ingest/: ir.py  loader.py  match.py  names.py  orgs.py  storage.py  transcribe.py
catalog/migrations/: 0001_jurisdiction_source.py  0002_organization_person.py  0003_meeting_agendaitem.py  0004_media_models.py  0005_document.py  0006_vote_appearance.py  0007_citation.py  0008_motion.py  0009_schema_hardening.py  0010_document_search_vector_trigger.py  0011_mediaasset_youtube_unique.py  0012_transcriptsegment_search_vector_trigger.py  0013_relationship.py  0014_agendaitem_amount_agendaitem_amount_text.py
catalog/models/: __init__.py  base.py  citation.py  document.py  facts.py  media.py  meeting.py  org.py  relationship.py
catalog/tests/: test_admin.py  test_api_auth.py  test_api_meetings.py  test_api_serializers.py  test_api_services.py  test_api_uploads.py  test_base.py  test_bcsd_adapter.py  test_bcsd_agenda_md.py  test_bcsd_event_md.py  test_bcsd_files.py  test_bcsd_foldername.py  test_bcsd_minutes_md.py  test_bcsd_motions.py  test_bcsd_recording.py  test_bcsd_vtt.py  test_citation.py  test_document.py  test_extract_amount.py  test_facts.py  test_ingest_bcsd_command.py  test_ingest_ir.py  test_ingest_loader.py  test_ingest_match.py  test_ingest_names.py  test_ingest_recording_command.py  test_ingest_storage.py  test_ingest_transcribe.py  test_ir_amount.py  test_media.py  test_meeting.py  test_meeting_amount.py  test_minutes_archive_sweep.py  test_motion_model.py  test_org.py  test_orgs.py  test_provenance_smoke.py  test_schema_hardening.py  (+1 more)
civicvault/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
core/: urls.py  views.py
k8s/: README.md  deployment.yaml  ingressroute.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
scripts/: export_year.py  import_dev_years.py  whisper_flac_recordings.py
templates/: base.html
tests/: test_build_relationships.py  test_graph_view.py  test_prune_orphans.py  test_smoke.py  test_storage.py  test_year_filter.py
(+55 files in other folders)
