[project]
name = "civicvault"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-environ>=0.13.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations", "archive_data"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, pyupgrade, flake8-django
select = ["E", "F", "I", "B", "UP", "DJ"]
