[project]
name = "civicvault"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.21",
    "django>=6.0.5",
    "django-environ>=0.13.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.12.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]
gpu = [
    "nvidia-cublas-cu12>=12.9",
    "nvidia-cudnn-cu12>=9,<10",
]
ingest = [
    "faster-whisper>=1.2.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations", "archive_data"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, pyupgrade, flake8-django
select = ["E", "F", "I", "B", "UP", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "civicvault.settings"
python_files = ["test_*.py", "tests.py", "*_test.py"]
